# kanpe

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  biome.json  index.html  overlay.html  package.json  pnpm-lock.yaml  vite.config.ts  wxt.config.ts
components/: AiActionBar.tsx  AiResponsePanel.tsx  ChatPanel.tsx  SessionListPanel.tsx  SettingsPanel.tsx  TranscriptPanel.tsx
components/ui/: ChatInput.tsx  ChatMessage.tsx  Header.tsx  UtteranceItem.tsx
docs/: PRD.md  ai-integration.md  architecture.md  components.md  content-script.md
entrypoints/: background.ts  content.ts
entrypoints/session-viewer/: App.tsx  index.html
entrypoints/sidepanel/: App.tsx  index.html  main.tsx
hooks/: useAiAction.ts  useChat.ts  useSession.ts  useSessionList.ts  useSettings.ts  useTranscript.ts
lib/: ai-provider.ts  anthropic.ts  messaging.ts  prompts.ts  provider-settings.ts  session-storage.ts  types.ts
lib/providers/: anthropic.ts  index.ts  ollama.ts  openai.ts
src/: App.tsx  OverlayApp.tsx  main.tsx  overlay.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: main-window.json  overlay-window.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/scripts/: faster_whisper_stream.py  sys_audio_capture.swift
src-tauri/src/: audio.rs  lib.rs  main.rs  state.rs  window.rs
src-tauri/src/commands/: ai.rs  mod.rs  permissions.rs  recording.rs  sessions.rs  settings.rs  window.rs
src-tauri/src/llm/: mod.rs
src/hooks/: use-tauri-events.ts
src/lib/: i18n.ts  tauri.ts
src/routes/: onboarding.tsx  session-detail.tsx  sessions.tsx
src/stores/: app-store.ts  overlay-store.ts  (+2 more)
stores/: meetingStore.ts
utils/: caption-parser.ts
(+21 files in other folders)
