[package]
name = "kanpe"
version = "0.1.0"
edition = "2021"
description = "Kanpe - Conversation Assistant"

[lib]
name = "kanpe_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
cpal = "0.15"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
dotenvy = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"
